--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -6,21 +6,21 @@
   font-size: 32px;
   line-height: 109%;
   color: #ffffff;
-  padding: 0 16px;
   justify-self: start;
+  padding-left: 16px;
+  margin: 0;
 }
 
 @media screen and (min-width: 768px) {
   .place__title {
     font-size: 42px;
     line-height: 110%;
-    padding: 0 0 0 16px;
+    padding-left: 0;
   }
 }
 @media screen and (min-width: 1024px) {
   .place__title {
     font-size: 72px;
     line-height: 106%;
-    padding: 0 0 0 48px;
   }
 }
