--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -5,12 +5,16 @@
 @media screen and (min-width: 768px) {
   .places {
     margin-top: 15px;
+    padding-left: 24px;
+    padding-right: 24px;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .places {
     margin-top: 12px;
+    padding-left: 48px;
+    padding-right: 48px;
   }
 }
 
