--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -15,13 +15,12 @@
     grid-column: 2;
     grid-row: 2;
     margin-top: 0;
-    padding: 0 24px 0 0;
+    padding: 0;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .place__paragraph {
     font-size: 18px;
-    padding: 0 48px 0 0;
   }
 }
