--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,7 +2,7 @@
   background-color: #2a2c2f;
   font-family: "Inter", Arial, sans-serif;
   padding: 16px 0 24px 0;
-  max-width: 1280pх;
+  max-width: 1280px;
 }
 
 @media screen and (min-width: 768px) {
